--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -1,11 +1,11 @@
 .text {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 
-  &.paragraph {
+  &.text-paragraph {
 
   }
 
-  &.title {
+  &.text-title {
     font-size: 38px;
     font-weight: 700;
   }
