Add support for clickable cards

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -4,6 +4,10 @@
   height: 200px;
   perspective: 1000px;
 
+  &.card-clickable {
+    cursor: pointer;
+  }
+
   .card-content {
     position: relative;
     width: 100%;
