--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,3 +1,5 @@
+$borderColor: #cf4421;
+
 .card {
   background-color: transparent;
   width: 200px;
@@ -20,7 +22,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      border: 5px solid #cf4421;
+      border: 5px solid $borderColor;
       border-radius: 10px;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
@@ -38,6 +40,9 @@
     .card-content-back {
       background-color: white;
       color: black;
+      display: flex;
+      align-items: center;
+      justify-content: center;
 
       &::before {
         content: '';
@@ -47,6 +52,21 @@
         top: 0;
         width: 100%;
         height: 100%;
+      }
+
+      .card-numberer {
+        position: absolute;
+        width: 40px;
+        height: 40px;
+        background: white;
+        border: 3px solid $borderColor;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: $borderColor;
+        font-size: 24px;
+        font-weight: 800;
       }
     }  
   }
