--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -44,16 +44,6 @@ $borderColor: #cf4421;
       align-items: center;
       justify-content: center;
 
-      &::before {
-        content: '';
-        border-radius: 10px;
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-      }
-
       .card-numberer {
         position: absolute;
         width: 40px;
@@ -67,6 +57,9 @@ $borderColor: #cf4421;
         color: $borderColor;
         font-size: 24px;
         font-weight: 800;
+        -webkit-user-select: none; 
+        -ms-user-select: none; 
+        user-select: none; 
       }
     }  
   }
@@ -75,9 +68,11 @@ $borderColor: #cf4421;
     transform: rotateY(180deg);
   }
 
-  &.card-zigzag .card-content-back::before {
-    background: linear-gradient(135deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ECEDDC 25%, transparent 25%), linear-gradient(45deg, #ECEDDC 25%, transparent 25%);
-    background-size: 100px 100px;
-    background-color: #EC173A;
+  &.card-zigzag {
+    .card-content-back {
+      background: linear-gradient(135deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ECEDDC 25%, transparent 25%), linear-gradient(45deg, #ECEDDC 25%, transparent 25%);
+      background-size: 100px 100px;
+      background-color: #EC173A;
+    }
   }
 }
