--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -2,16 +2,22 @@ $borderColor: #cf4421;
 
 .card {
   background-color: transparent;
-  width: 200px;
-  height: 200px;
+  max-width: 200px;
+  width: 100%;
   perspective: 1000px;
+
+  &.card:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
 
   &.card-clickable {
     cursor: pointer;
   }
 
   .card-content {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     text-align: center;
