--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -1,12 +1,9 @@
 .text {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
-  &.text-paragraph {
-
-  }
 
   &.text-title {
+    color: deepskyblue;
     font-size: 38px;
     font-weight: 700;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 1);
   }
 }
