--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,9 +1,24 @@
 .button {
   background-color: white;
-  border-radius: 3px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  line-height: 40px;
+  font-size: 24px;
+  margin-bottom: 20px;
+  border: 2px solid;
   cursor: pointer;
+  
+  &.button-disabled {
+    opacity: 0.2;
+    cursor: not-allowed;
+  }
+
+  &.button-normal {
+    color: lightblue;
+  }
 
   &.button-primary {
-    border-color: blue;
+    color: deepskyblue;
   }
 }
