--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -7,6 +7,9 @@
   font-size: 24px;
   margin-bottom: 20px;
   border: 2px solid;
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
   cursor: pointer;
   
   &.button-disabled {
