--- a/src/components/Logo/index.scss
+++ b/src/components/Logo/index.scss
@@ -8,6 +8,9 @@
   width: 240px;
   height: 240px;
   padding: 20px;
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
 
   .logo-content {
     position: relative;
