--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -1,4 +1,7 @@
 .text {
+  -webkit-user-select: none; 
+  -ms-user-select: none; 
+  user-select: none; 
 
   &.text-title {
     color: deepskyblue;
