--- a/src/pages/MemoResultPage/index.scss
+++ b/src/pages/MemoResultPage/index.scss
@@ -1,6 +1,13 @@
 #memo-result-page {
+  padding-top: 20px;
+  
+  .main-title {
+    margin-bottom: 30px;
+  }
+
   .congratulations {
     width: 400px;
     height: 400px;
+    margin-bottom: 20px;
   }
 }
