Add new Card theme

--- a/src/pages/HomePage/index.scss
+++ b/src/pages/HomePage/index.scss
@@ -1,6 +1,10 @@
 #home-page {
   padding-top: 100px;
 
+  .main-logo {
+    margin-bottom: 30px;
+  }
+
   .main-title {
     margin-bottom: 60px;
   }
