--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -81,4 +81,13 @@ $borderColor: #cf4421;
       background-color: #EC173A;
     }
   }
+
+  &.card-theme-tablecloth {
+    .card-content-back {
+      background-color:white;
+      background-image: linear-gradient(90deg, rgba(200,0,0,.5) 50%, transparent 50%),
+      linear-gradient(rgba(200,0,0,.5) 50%, transparent 50%);
+      background-size:50px 50px;
+    }
+  }
 }
