--- a/src/components/Logo/index.scss
+++ b/src/components/Logo/index.scss
@@ -1,21 +1,26 @@
 .logo {
-  display: inline-block;
+  display: inline-flex;
   background-color: white;
   border-radius: 8px;
   box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.75);
   -webkit-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 2px 2px 4px 0px rgba(0,0,0,0.75);
-  width: 240px;
-  height: 240px;
+  max-width: 240px;
+  width: 100%;
   padding: 20px;
   -webkit-user-select: none; 
   -ms-user-select: none; 
   user-select: none; 
 
+  &.logo:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
+  }
+
   .logo-content {
     position: relative;
-    width: 100%;
-    height: 100%;
+    flex: 1;
 
     .logo-item {
       position: absolute;
