--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -1,5 +1,3 @@
-$borderColor: #cf4421;
-
 .card {
   background-color: transparent;
   max-width: 200px;
@@ -28,7 +26,7 @@ $borderColor: #cf4421;
       position: absolute;
       width: 100%;
       height: 100%;
-      border: 5px solid $borderColor;
+      border: 5px solid gray;
       border-radius: 10px;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
@@ -55,12 +53,12 @@ $borderColor: #cf4421;
         width: 40px;
         height: 40px;
         background: white;
-        border: 3px solid $borderColor;
+        border: 3px solid;
         border-radius: 50%;
         display: flex;
         align-items: center;
         justify-content: center;
-        color: $borderColor;
+        color: gray;
         font-size: 24px;
         font-weight: 800;
         -webkit-user-select: none; 
@@ -74,19 +72,23 @@ $borderColor: #cf4421;
     transform: rotateY(180deg);
   }
 
-  &.card-theme-zigzag {
-    .card-content-back {
-      background: linear-gradient(135deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(225deg, #ECEDDC 25%, transparent 25%) -50px 0, linear-gradient(315deg, #ECEDDC 25%, transparent 25%), linear-gradient(45deg, #ECEDDC 25%, transparent 25%);
-      background-size: 100px 100px;
-      background-color: #EC173A;
-    }
-  }
-
   &.card-theme-tablecloth {
+    $primaryColor: #e38d07;
+    $backBaseColor: white;
+    $backPrimaryColor: rgba(242, 208, 155,.5);
+
+    .card-content-front, .card-content-back {
+      border-color: $primaryColor;
+    }
+
+    .card-numberer {
+      color: $primaryColor !important;
+    }
+
     .card-content-back {
-      background-color:white;
-      background-image: linear-gradient(90deg, rgba(200,0,0,.5) 50%, transparent 50%),
-      linear-gradient(rgba(200,0,0,.5) 50%, transparent 50%);
+      background-color: $backBaseColor;
+      background-image: linear-gradient(90deg, $backPrimaryColor 50%, transparent 50%),
+      linear-gradient($backPrimaryColor 50%, transparent 50%);
       background-size:50px 50px;
     }
   }
