--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -72,10 +72,10 @@
     transform: rotateY(180deg);
   }
 
-  &.card-theme-tablecloth {
-    $primaryColor: #e38d07;
-    $backBaseColor: white;
-    $backPrimaryColor: rgba(242, 208, 155,.5);
+  &.card-theme-carbon_fiber {
+    $primaryColor: cornflowerblue;
+    $backBaseColor: #abcade;
+    $backHolesColor: #a0c4d9;
 
     .card-content-front, .card-content-back {
       border-color: $primaryColor;
@@ -86,10 +86,13 @@
     }
 
     .card-content-back {
-      background-color: $backBaseColor;
-      background-image: linear-gradient(90deg, $backPrimaryColor 50%, transparent 50%),
-      linear-gradient($backPrimaryColor 50%, transparent 50%);
-      background-size:50px 50px;
+      background:
+      radial-gradient($backHolesColor 15%, transparent 16%) 0 0,
+      radial-gradient($backHolesColor 15%, transparent 16%) 8px 8px,
+      radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+      radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+      background-color:$backBaseColor;
+      background-size:16px 16px;
     }
   }
 }
