--- a/src/components/Page/index.scss
+++ b/src/components/Page/index.scss
@@ -1,3 +1,6 @@
+$backgroundColorStart: rgb(240,255,255);
+$backgroundColorEnd: rgb(210,238,249);
+
 .page {
   position: absolute;
   top: 0;
@@ -5,6 +8,8 @@
   width: 100%;
   height: 100%;
   overflow: auto;
+  background: $backgroundColorStart;
+  background: linear-gradient(180deg, $backgroundColorStart 0%, $backgroundColorEnd 100%);
   
   .page-container {
     text-align: center;
