--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -5,25 +5,25 @@
   left: 0;
   width: 100%;
   height: 100%;
-  align-items: center;
-  justify-content: center;
   overflow: auto;
   padding: 20px;
+  align-items: center;
+  justify-content: center;
+  flex-flow: wrap-reverse;
 
-  &::before {
-    content: '';
+  &.modal-open {
+    display: flex;
+  }
+
+  .modal-overlay {
     background-color: black;
     opacity: 0.8;
-    position: absolute;
+    position: fixed;
     top: 0; 
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
-  }
-
-  &.modal-visible {
-    display: flex;
   }
 
   .modal-panel {
