Add difficulties modal

--- a/src/pages/HomePage/index.scss
+++ b/src/pages/HomePage/index.scss
@@ -12,4 +12,10 @@
   .main-title {
     margin-bottom: 60px;
   }
+
+  .new-game-modal {
+    .button:last-child {
+      margin-bottom: 0px;
+    }
+  }
 }
