--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -10,4 +10,8 @@
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 1);
     line-height: 47px;
   }
+
+  &.text-modal-title {
+    margin-bottom: 30px;
+  }
 }
