--- a/src/pages/MemoResultPage/index.scss
+++ b/src/pages/MemoResultPage/index.scss
@@ -1,13 +1,10 @@
 #memo-result-page {
   padding-top: 30px;
   
-  .main-title {
-    margin-bottom: 40px;
-  }
-
   .congratulations {
     width: 400px;
     height: 400px;
     margin-bottom: 20px;
+    max-width: 100%;
   }
 }
