--- a/src/pages/MemoResultPage/index.scss
+++ b/src/pages/MemoResultPage/index.scss
@@ -2,9 +2,8 @@
   padding-top: 30px;
   
   .congratulations {
-    width: 400px;
-    height: 400px;
+    width: 100%;
     margin-bottom: 20px;
-    max-width: 100%;
+    max-width: 400px;
   }
 }
