--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -1,11 +1,12 @@
 .button {
+  display: block;
   background-color: white;
   border-radius: 8px;
   width: 100%;
   max-width: 600px;
   line-height: 40px;
   font-size: 24px;
-  margin-bottom: 20px;
+  margin: 0 auto 20px auto;
   border: 2px solid;
   -webkit-user-select: none; 
   -ms-user-select: none; 
