--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -2,6 +2,7 @@
   -webkit-user-select: none; 
   -ms-user-select: none; 
   user-select: none; 
+  font-size: 20px;
 
   &.text-title {
     color: deepskyblue;
