--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -30,7 +30,7 @@
   .modal-panel {
     z-index: 1;
     opacity: 1;
-    background-color: white;
+    background-color: azure;
     border: 3px solid deepskyblue;
     border-radius: 12px;
     padding: 30px;
