--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -1,5 +1,5 @@
 .modal {
-  display: none;
+  display: flex;
   position: fixed;
   top: 0;
   left: 0;
@@ -10,24 +10,35 @@
   align-items: center;
   justify-content: center;
   flex-flow: wrap-reverse;
+  pointer-events: none;
 
   &.modal-open {
-    display: flex;
+    pointer-events: all;
+
+    .modal-panel {
+      display: block;
+    }
+
+    .modal-overlay {
+      opacity: 0.7;
+    }
   }
 
   .modal-overlay {
     background-color: black;
-    opacity: 0.8;
     position: fixed;
     top: 0; 
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 0;
+    transition: opacity 0.6s;
+    opacity: 0;
     cursor: pointer;
   }
 
   .modal-panel {
+    display: none;
     z-index: 1;
     opacity: 1;
     background-color: azure;
