--- a/src/pages/MemoResultPage/components/ContratulationsBanner/index.scss
+++ b/src/pages/MemoResultPage/components/ContratulationsBanner/index.scss
@@ -1,12 +1,14 @@
 .congratulations-banner {
   background-color: beige;
   border-radius: 20px;
-  margin: 20px;
   border: 3px solid khaki;
+  width: 100%;
+  max-width: 400px;
+  margin: 20px auto;
   
   .animation {
     width: 100%;
     margin-bottom: 20px;
-    max-width: 400px;
+    max-width: 200px;
   }
 }
