--- a/src/pages/MemoPage/index.scss
+++ b/src/pages/MemoPage/index.scss
@@ -14,4 +14,12 @@
     justify-content: center;
     margin-bottom: 20px;
   }
+
+  .success-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 }
