Add paragraph text styles

--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -12,6 +12,10 @@
     line-height: 47px;
   }
 
+  &.text-paragraph {
+    color: deepskyblue;
+  }
+
   &.text-modal-title {
     margin-bottom: 30px;
   }
