Rename default card theme

--- a/src/components/Card/themes/classic.scss
+++ b/src/components/Card/themes/classic.scss
@@ -3,7 +3,7 @@ $backBaseColor: #abcade;
 $backHolesColor: #a0c4d9;
 
 .card {
-  &.card-theme-carbon_fiber {
+  &.card-theme-classic {
     
     .card-content-front, .card-content-back {
       border-color: $primaryColor;
