Add Card Stories

--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -31,6 +31,7 @@
       height: 100%;
       border: 5px solid gray;
       border-radius: 10px;
+      box-sizing: border-box;
       -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
       box-shadow: 2px 2px 4px 0px rgba(0, 0, 0, 0.75);
