Fix storybook styles

--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -14,6 +14,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  font-family: 'Sigmar One';
   cursor: pointer;
 
   &.button-disabled {
