--- a/src/components/Text/index.scss
+++ b/src/components/Text/index.scss
@@ -3,6 +3,7 @@
   -ms-user-select: none; 
   user-select: none; 
   font-size: 20px;
+  font-family: 'Sigmar One';
 
   &.text-title {
     color: deepskyblue;
