--- a/src/components/Button/index.scss
+++ b/src/components/Button/index.scss
@@ -3,6 +3,7 @@
   background-color: white;
   border-radius: 8px;
   width: 100%;
+  flex-shrink: 0;
   max-width: 600px;
   line-height: 40px;
   font-size: 24px;
