--- a/src/components/Version/index.scss
+++ b/src/components/Version/index.scss
@@ -1,8 +1,8 @@
 .version {
   z-index: 100;
   position: absolute;
-  right: 0;
-  top: 0;
+  right: 3px;
+  top: 3px;
   font-family: sans-serif;
   font-size: 13px;
   font-weight: 600;
